objects/Activity.object
<CustomObject>
    <fields>
        <fullName>TW1_Retorno__c</fullName>
        <label>Retorno</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Positivo</fullName>
                </value>
                <value>
                    <fullName>Negativo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Reuniao_Presencial__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reunião Presencial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TW1_Saida_Repasse__c</fullName>
        <label>Saída do Repasse</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>TW1_Repasse_sera_realizado__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>TW1_Saidas_Repasse</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Setor__c</fullName>
        <label>Setor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Relacionamento</fullName>
                </value>
                <value>
                    <fullName>Comercial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Situacao__c</fullName>
        <label>Situação</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sem Contato</fullName>
                </value>
                <value>
                    <fullName>Dados Inválidos ou Inexistentes</fullName>
                </value>
                <value>
                    <fullName>Contato Realizado</fullName>
                </value>
                <value>
                    <fullName>Financiamento após a averbação</fullName>
                </value>
                <value>
                    <fullName>Entrevista agendada</fullName>
                </value>
                <value>
                    <fullName>Processo iniciado</fullName>
                </value>
                <value>
                    <fullName>Restrição cadastral</fullName>
                </value>
                <value>
                    <fullName>Aguardando envio ao banco</fullName>
                </value>
                <value>
                    <fullName>Aguardando habite-se</fullName>
                </value>
                <value>
                    <fullName>Em análise 1ª fase</fullName>
                </value>
                <value>
                    <fullName>Crédito aprovado</fullName>
                </value>
                <value>
                    <fullName>Em exigência 1ª fase</fullName>
                </value>
                <value>
                    <fullName>Crédito negado</fullName>
                </value>
                <value>
                    <fullName>Em análise 2ª fase</fullName>
                </value>
                <value>
                    <fullName>Em exigência 2ª fase</fullName>
                </value>
                <value>
                    <fullName>Aguardando emissão de contrato</fullName>
                </value>
                <value>
                    <fullName>Aprovado jurídico</fullName>
                </value>
                <value>
                    <fullName>Confirmação valores construtoras</fullName>
                </value>
                <value>
                    <fullName>Confirmação valores cliente</fullName>
                </value>
                <value>
                    <fullName>Liberado para agendamento</fullName>
                </value>
                <value>
                    <fullName>Escritura agendada</fullName>
                </value>
                <value>
                    <fullName>Contrato em assinatura</fullName>
                </value>
                <value>
                    <fullName>Assinatura IQ</fullName>
                </value>
                <value>
                    <fullName>Em despachadoria - Check list</fullName>
                </value>
                <value>
                    <fullName>Em despachadoria - Pendência documento</fullName>
                </value>
                <value>
                    <fullName>Liberado para prenotação</fullName>
                </value>
                <value>
                    <fullName>Prenotado</fullName>
                </value>
                <value>
                    <fullName>Exigência cartório</fullName>
                </value>
                <value>
                    <fullName>Em finalização</fullName>
                </value>
                <value>
                    <fullName>Inativo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Status_financeiro_do_cliente__c</fullName>
        <label>Status financeiro do cliente</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Crédito</fullName>
                </value>
                <value>
                    <fullName>Débito</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Tipo_Tarefa__c</fullName>
        <label>Tipo da Tarefa</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Agendar Assinatura com Cliente</fullName>
                </value>
                <value>
                    <fullName>Agendar com Cliente</fullName>
                </value>
                <value>
                    <fullName>Agendar Vistoria com Cliente</fullName>
                </value>
                <value>
                    <fullName>Aguardar Documentação de Contrato</fullName>
                </value>
                <value>
                    <fullName>Aguardar Documentação de Crédito</fullName>
                </value>
                <value>
                    <fullName>Aguardar Documentação do Cliente</fullName>
                </value>
                <value>
                    <fullName>Analisar Caso</fullName>
                </value>
                <value>
                    <fullName>Analisar Caso Cessão</fullName>
                </value>
                <value>
                    <fullName>Analisar Condições</fullName>
                </value>
                <value>
                    <fullName>Analisar Contrato</fullName>
                </value>
                <value>
                    <fullName>Analisar Crédito</fullName>
                </value>
                <value>
                    <fullName>Analisar Documentos</fullName>
                </value>
                <value>
                    <fullName>Analisar Reclamação</fullName>
                </value>
                <value>
                    <fullName>Analisar Saldo Devedor</fullName>
                </value>
                <value>
                    <fullName>Analisar Solicitação de Modificação</fullName>
                </value>
                <value>
                    <fullName>Analisar Solicitação do Cliente</fullName>
                </value>
                <value>
                    <fullName>Analisar Sugestão</fullName>
                </value>
                <value>
                    <fullName>Análise de Solicitação</fullName>
                </value>
                <value>
                    <fullName>Atualização Cadastral</fullName>
                </value>
                <value>
                    <fullName>Comunicar Cliente</fullName>
                </value>
                <value>
                    <fullName>Conferência de Contratos</fullName>
                </value>
                <value>
                    <fullName>Contatar Cliente</fullName>
                </value>
                <value>
                    <fullName>Criar Simulação de Antecipação</fullName>
                </value>
                <value>
                    <fullName>Devolução de Cheque</fullName>
                </value>
                <value>
                    <fullName>Encaminhar para a Construtora Responsável</fullName>
                </value>
                <value>
                    <fullName>Encerrar Caso</fullName>
                </value>
                <value>
                    <fullName>Enviar Aprovação</fullName>
                </value>
                <value>
                    <fullName>Enviar documentação</fullName>
                </value>
                <value>
                    <fullName>Fornecer Feedback Interno</fullName>
                </value>
                <value>
                    <fullName>Gerar Boleto</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Tipo_de_Contrato__c</fullName>
        <label>Tipo de Contrato</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Particular</fullName>
                </value>
                <value>
                    <fullName>Pública</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Tratativa_Proposta_Pelo_Cliente__c</fullName>
        <label>Tratativa Proposta Pelo Cliente</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TW1_Tratativa_Rescisao__c</fullName>
        <label>Tratativa Rescisão</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Permuta</fullName>
                </value>
                <value>
                    <fullName>Quitação</fullName>
                </value>
                <value>
                    <fullName>Cessão de Direitos</fullName>
                </value>
                <value>
                    <fullName>Alienação Fiduciária</fullName>
                </value>
                <value>
                    <fullName>Rescisão com Venda Nova</fullName>
                </value>
                <value>
                    <fullName>Rescisão</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Tratativa__c</fullName>
        <label>Tratativa</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Reapresentar Cheque</fullName>
                </value>
                <value>
                    <fullName>Suspender Reapresentação de Cheque</fullName>
                </value>
                <value>
                    <fullName>Enviar via OAB</fullName>
                </value>
                <value>
                    <fullName>Não enviar via OAB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_UAU_CRM_foram_atualizados__c</fullName>
        <label>UAU/CRM foram atualizados?</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>TW1_Necessita_Atualizar_no_UAU_CRM__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Unidade_Liberada__c</fullName>
        <label>Unidade Liberada?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
                <value>
                    <fullName>Não, reagendar vistoria</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Unidade__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unidade</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Atividades</relationshipLabel>
        <relationshipName>Atividades</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_Upload_Realizado__c</fullName>
        <label>Upload Realizado?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Valor_do_Cheque__c</fullName>
        <label>Valor do Cheque</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TW1_Valores_estao_corretos__c</fullName>
        <label>Valores estão corretos?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Vistoria_Aprovada__c</fullName>
        <label>Vistoria Aprovada?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tw1_Cliente_concordou__c</fullName>
        <label>Cliente concordou?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tw1_Cliente_deseja_realizar_altera_es__c</fullName>
        <label>Cliente deseja realizar alterações?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
                <value>
                    <fullName>Sim, reagendar vistoria</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tw1_Dias_Tarefa_Aberta__c</fullName>
        <formula>(5 * ( FLOOR( ( TODAY() - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( TODAY() - DATE( 1900, 1, 8), 7 ) ) )
-
(5 * ( FLOOR( ( DATEVALUE(CreatedDate) - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( DATEVALUE(CreatedDate) - DATE( 1900, 1, 8), 7 ) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dias Tarefa Aberta</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tw1_Minuta_aceita_pelo_cliente__c</fullName>
        <label>Minuta aceita pelo cliente?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tw1_Modificacoes_aprovadas_pelo_cliente__c</fullName>
        <label>Modificações aprovadas pelo cliente?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllActivities</fullName>
        <filterScope>Team</filterScope>
        <label>All Activities</label>
    </listViews>
    <listViews>
        <fullName>MyActivities</fullName>
        <columns>ACTIVITY_SUBTYPE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>EVENT.LOCATION</columns>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>